# qkiosk-py

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
qkiosk/: __init__.py  account.py  data.py  fundamentals.py  ownership.py  qkid.py  univ.py  utils.py  yyyymmdd.py
qkiosk/datasets/: crox.csv  deshaw.csv  nke.csv  pershing.csv  pfe.csv  sgcap.csv
tests/: test_yyyymmdd.py
